remove direct dependency on javax.rmi from core
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>